# AI_gpt_bot

./: .env  .gitignore  Dockerfile  custom_redis.conf  docker-compose.yaml  pyproject.toml
src/: __main__.py  configuration.py  settings.py
src/backend/: app.py
src/backend/templates/: index.html  script.js  style.css
src/db/: db_utils.py  models.py
src/db/migrations/models/: 0_20230801000300_init.py
src/handlers/: __init__.py
src/handlers/admin/: sample.py
src/handlers/user/: __init__.py  dialog.py  menu.py  start.py
src/middlewares/: chat_action.py
src/utils/: commands.py  keyboards.py
